bugf: trusted-by section overflowing fixed

--- a/style.css
+++ b/style.css
@@ -113,15 +113,20 @@ main {
       display: flex;
       /* background-color: #ff0000; */
       gap: 8px;
-    }
-    img {
-      box-sizing: content-box;
-      flex: 1;
-      height: 40px;
-      background-color: rgb(27, 25, 19);
-      padding: 35px;
-      border-radius: 4px;
-      margin-top: 25px;
+      flex-wrap: wrap;
+      justify-content: center;
+      /* overflow: hidden; */
+
+      img {
+        box-sizing: content-box;
+        max-width: 140px;
+        flex: 1;
+        height: 40px;
+        background-color: rgb(27, 25, 19);
+        padding: 28px;
+        border-radius: 4px;
+        margin-top: 25px;
+      }
     }
   }
 }
@@ -230,11 +235,14 @@ main {
     margin-bottom: 40px;
   }
   .list-card {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    display: flex;
+    /* flex-wrap: wrap; */
+
+    /* grid-template-columns: repeat(3, 1fr); */
     gap: 10px;
 
     .card-frontier {
+      /* flex: 0 0 auto; */
       display: flex;
       flex-direction: column;
       height: 523px;
